static/oabutton_rebrand.css
@import url('https://rsms.me/inter/inter.css');

html, body{
  margin:0;
  padding:0;
  font-size:1em;
  font-family: 'Inter', sans-serif;
  color:#212f3f;
}

@supports (font-variation-settings: normal) {
  html { font-family: 'Inter var', sans-serif; }
}

html {
  background-color:#ffffff;
  scroll-behavior: smooth;
}

body {
  background-color:#ffffff;
}

.row {
  padding:0;
  margin:0;
  height:100%;
}

.container-fluid {
  padding:0;
  max-width:none;
}

.section {
  display: none;
  height:100%;
}

h1, h2, h3, h4, h5, h6 {
  font-weight:bold;
}

ul.arrowed {
  margin-top:30px;
  margin-bottom:30px;
  list-style: none;
  padding-left: 15px;
}
ul.arrowed li {
  margin-bottom:15px;
}

.glyphicon-arrow-right{
  padding-right:5px;
}

.form-control {
  background-color: white;
  border-radius:0px;
}
.form-control.green {
  /*background-color:#edf8ed;*/
  color:#46b633;
  border:2px solid #46b633;
}
.form-control:focus {
  border:2px solid #46b633;
  /*box-shadow:inset 0 1px 1px #46b633,0 0 8px #46b633;*/
}

a.green {
  color:#46b633;
  font-weight:bold;
}
a.green.light {
  font-weight:normal;
 
}
a.green:hover {
  color:#608891;
}

.btn-rebrand {
  background-color:#46b633;
  border-color:#46b633;
  border-radius:0px;
  color:#ffffff;
  font-weight:bold;
  padding-top:10px;
  padding-bottom:10px;
}
.btn-rebrand:hover {
  color:#ffffff;
}

.btn-half {
  width:49%;
}

.btn-primary {
  background-color:#46b633;
  border-color:#46b633;
  border-radius:0px;
  color:#ffffff;
  width:49%;
  font-weight:bold;
  padding-top:10px;
  padding-bottom:10px;
}
.btn-primary:hover {
  background-color:#46b633;
  border-color:#46b633;
  color:#ffffff;
}

div.green {
  background-color:#edf8ed;
  /*color:#46b633;*/
  height:100%;
  padding-bottom:160px;
}
div.greenery {
  margin-top:10%;
  margin-left:10%;
  width:80%;
  max-width:500px;
  /*text-align: justify;
  text-justify: inter-word;*/
}
div.greenbottom {
  position:absolute;
  bottom:20px;
  left:13%;
  width:75%;
  max-width:500px;
}

/*------------------------sams css below---------------------------*/
  .center-col{
    max-width: 1400px;
    margin: auto;
  }

  h2{
    line-height: 140%;
    text-align: center;
  }

  h3{
    line-height: 140%;
  }

  h4{
    margin: 0;
  }

  a:hover{
    text-decoration: none;
    cursor:pointer;
    color: #345484;
  }

  p{
    line-height: 165%;
    text-align: left;
    padding:30px 0;
  }

  li{
    padding-top: 10px;
  }

/*general div backgrounds*/

  .green-bg{
    width: 100%;
    padding: 30px;
    background-color: #46B633;
    color: white;
  }
  .green-bg h2{
    color: white;
  }

  .navy-bg{
    width: 100%;
    padding: 30px;
    background-color: #428BCA;
    color: white;
  }

  .white-bg{
    width: 100%;
    padding: 30px;
    background-color: white;
  }

  .dark-bg{
    width: 100%;
    padding: 30px;
    background-color: #212f3f;
    color: white; 
  }

/*header*/

  .header{
    display: flex;
    align-items: center;
    justify-content: space-between;
  }
  .header strong{
    letter-spacing: 2px;
  }
  .header a{
    color: white;
    margin: 0;
  }
  .header p{
    margin: 0;
  }
  .header span{
    padding: 0 10px;
  }


/* first thing the user sees at page top banner*/

  .pitch{
    padding: 120px 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }

  .pitchhalf{
    text-align: center;
    width:50%;
    padding: 30px;
  }

  .pitchhalf p{
    text-align: left;
  }

/*buttons*/

  .btn{
    width:100%;
    max-width: 245px;
    font-weight: bold;
    padding: 10px 30px;
    border-radius: 0px;
  }

  .btn-rebrand-blue{
    background-color: #428BCA;
    color: white;
    border:none;
  }

  .btn-rebrand-blue:hover{
    background-color: #345484;
    color: white;
  }

  .btn-rebrand-white{
    background-color: white;
    border-color: white;
    color: #46b633;
    border:none;
  }

  .btn-rebrand-white:hover{
    background-color: #ddd;
  }

  .btn-rebrand-green{
    background-color: #46B633;
    border:none;
    color:white;
  }

  .btn-rebrand-green:hover{
    background-color: #608891;
    color: white;
  }

  .btn-hollow-green {
    border-color: #46b633;
    border-width: 2px;
    color: #46b633;
  }
  .btn-hollow-green:hover {
    border-color: #46b633;
    background-color: #46b633;
    color: white;
  }

/*features (lists of benefits)*/

  .features{
    padding:60px 0;
  }
  .featurebox{
    width: 49%;
    height: 300px;
    padding: 30px;
    display: inline-block;
    vertical-align:top;
  }
  .featurebox h2{
    text-align: center;
  }
  .featurebox ul{
    width:80%;
    margin: auto;
    margin-top:30px;
  }

/*programs(basic or leadership)*/

  .programs{
    display: flex;
    justify-content: space-between;
    text-align: center;
  }

  .program{
    width:50%;
    color:#46B633;
  }
  .programcontents{
    max-width:350px;
    margin: auto;
    padding: 50px 0;
    text-align: center;
  }

  .programcontents .btn{
    margin:20px 0;
  }

  .program li{
    list-style-image: url('/static/ul-tick-green.png');
  }

/*sales tools*/
  
  .tool-container{
    width: 33%;
    height: 560px;
    display: inline-block;
    padding: 30px;
  }

  .tool{
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .tool h4{
    text-align: center;
  }

  .tool img{
    width: 80%;
    padding-bottom: 30px;
  }
/*
  .tool a{
    width: 80%;
  }*/

/*quote with image*/

  .quote{
    display: flex;
    padding: 90px 30px;
    justify-content: center;
    text-align: center;
    align-items: center;
  }

  .quotetext{
    max-width: 800px;
    text-align: center;
    line-height: 130%;
    padding: 0 30px;
    /*margin: auto;*/
  }

  .quotetext h3{
    text-align: left;
    padding-bottom: 30px;
  }
  .quotetext p{
    text-align: left;
    font-style: italic;
    padding: 0;
  }

  .profilephoto{
    width: 200px;
    height: 200px;
    border-radius: 100px;
    margin: 0 30px;
  }

/*general purpose slogan text*/

  .strapline{
    max-width: 800px;
    text-align: left;
    margin: auto;
  }

  .unilogos{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
  }

  .unilogo{
    max-width:20%;
    width: auto;
    max-height: 180px;
    padding: 40px;
  }

  .media{
    display: inline-block;
    width: 100%;
    max-width: 1024px;
  } 

  .media img{
    width: 15%;
    height: auto;
    padding:10px;
  }

/*footer*/

  .footer{
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .footer span{
    color: white;
    padding: 0 10px;
  }
  .footer strong{
    letter-spacing: 2px;
  }
  .footer p{
    margin: 0 10px;
  }

  .footer-team{
    max-width: 1024px;
    margin:auto;
    display: flex;
    justify-content: space-between;
    padding-top: 60px;
  }

  .footer-team p{
    width:55%;
    padding:0;
  }
  .footer-team img{
    max-width: 395px;
    height: 315px;
    padding: 0 40px;
  }

/*if the footer sticks to bottom*/
  .stick-to-bottom{
    position: absolute;
    bottom: 0;
  }

  @media screen and (max-width: 1024px){
    .tool-container{
      width: 49%;
    }
    .featurebox{
      height: 440px;
    }

  }

  @media screen and (max-width: 768px){
    .tool-container{
      width: 100%;
    }

    .pitch{
      flex-direction: column-reverse;
      padding: 30px 0;
    }
    .pitchhalf{
      width:100%;
      padding: 0 30px;
    }
    .unilogos{
      display: inline;
    }
    .unilogo{
      max-width:49%;
      padding:20px;
      max-height: 1000px;
    }
    .quote{
      padding: 40px 0;
    }
    .featurebox{
      width:100%;
      height: 100%;
    }
    .featurebox ul{
      width:100%;
    }
    .programs{
      flex-direction: column;
    }
    .program{
      width:100%;
    }

    #rebrand{
      display: none;
    }
    .profilephoto{
      display: none;
    }
    .footer{
      align-items: flex-start;
      flex-direction: column;
    }
    .media img{
      width: 32%;
    }

    .footer-team{
      flex-direction: column-reverse;
      align-items: center;
    }

    .footer-team p{
      width: 100%;
      padding: 30px 0;
    }

  }

